--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,15 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
 attrs==22.1.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
 biopython==1.79
-bleach==5.0.1
-cffi==1.15.1
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==1.0.0
-fastjsonschema==2.16.1
-ipykernel==6.15.2
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-jedi==0.18.1
-Jinja2==3.1.2
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter_client==7.3.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-lxml==4.9.1
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-mistune==2.0.4
-nbclient==0.6.8
-nbconvert==7.0.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
+iniconfig==1.1.1
 numpy==1.23.3
 packaging==21.3
 pandas==1.4.4
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
 pip-autoremove==0.10.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-psutil==5.9.2
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.13.0
+pluggy==1.0.0
+py==1.11.0
 pyparsing==3.0.9
-pyrsistent==0.18.1
+pytest==7.1.3
 python-dateutil==2.8.2
 pytz==2022.2.1
-pyzmq==23.2.1
-qtconsole==5.3.2
-QtPy==2.2.0
-Send2Trash==1.8.0
 six==1.16.0
-soupsieve==2.3.2.post1
-stack-data==0.5.0
-terminado==0.15.0
-tinycss2==1.1.1
-tornado==6.2
-traitlets==5.4.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==4.0.3
+tomli==2.0.1
