--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /srcs/temp2.py
 /srcs/Result.fasta
 /srcs/result.fasta
+/meta/GCF_007682245.1.zip
+/srcs/temp_3.ipynb
+/Staphylococcus_species_1.csv
+/Results/
