--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /srcs/temp2.py
 /srcs/Result.fasta
 /srcs/result.fasta
-/meta/GCF_007682245.1.zip
+/meta/
 /srcs/temp_3.ipynb
 /Staphylococcus_species_1.csv
 /Results/
+info.txt
