--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 /srcs/.idea/
 /srcs/.ipynb_checkpoints/
 /srcs/temp.py
-/srcs/OS.py
 /srcs/temp2.py
-/srcs/Result.fasta
-/srcs/result.fasta
 /srcs/temp_3.ipynb
-/Staphylococcus_species_1.csv
 /Results/
-/srcs/Analyzer.py
-/srcs/Extractor.py
 /srcs/temp3.py
+/pyvenv.cfg
