Moved from srcs to CodonU

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/srcs/.idea/
-/srcs/.ipynb_checkpoints/
-/srcs/temp.py
-/srcs/temp2.py
-/srcs/temp_3.ipynb
+/CodonU/.idea/
+/CodonU/.ipynb_checkpoints/
+/CodonU/temp.py
+/CodonU/temp2.py
+/CodonU/temp_3.ipynb
 /Results/
-/srcs/temp3.py
+/CodonU/temp3.py
 /pyvenv.cfg
