--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-CAI~=1.0.3
-biopython==1.79
+CAI2~=1.0.5
+biopython~=1.79
 numpy~=1.24.2
-pandas==1.4.4
+pandas~=2.0.0
 matplotlib~=3.6.3
 scipy~=1.10.0
 prince~=0.7.1
