--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 biopython~=1.79
 numpy~=1.24.2
-pandas>=2.0.0
-matplotlib~=3.6.3
+pandas~=2.1.1
+matplotlib>=3.6.3
 scipy~=1.10.0
-prince~=0.7.1
+prince~=0.12.1
 gtAI~=1.0.4
